common/w32help.h
@@ -30,6 +30,13 @@
 
 #ifndef GNUPG_COMMON_W32HELP_H
 #define GNUPG_COMMON_W32HELP_H
+
+/*-- w32-misc.c --*/
+/* This module is also part of the Unix tests.  */
+char **w32_parse_commandline (char *cmdline, int globing, int *r_argc);
+
+
+
 #ifdef HAVE_W32_SYSTEM
 
 /*-- w32-reg.c --*/
